--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
@@ -5,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <meta name="google-site-verification" content="obqgsTgc2EeaoIrg96DvXA-Wj0PmAp7eiG-H0h9G8IQ" />
+    <meta name="google-site-verification" content="jdzFPFZVXpjfSBwv08gKaFFfI9QiMaEC-sgFDdS-M10" />
     <link rel="amphtml" href="https://27001.365rajaamp.com/">
-    <link rel="canonical" href="https://ftp.duveen.me/">
+    <link rel="canonical" href="http://mail.progroker.com/">
     <link rel="icon" type="image/png" href="//85de39-b8.myshopify.com/cdn/shop/files/rajaslots365.jpg?crop=center&height=32&v=1712228189&width=32">
     <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     <title> 365RAJA: Situs Slot Terpercaya untuk Kemenangan MAXWIN </title>
     <meta name="description" content="Temukan kemenangan MAXWIN hanya di 365RAJA, situs slot terpercaya pilihan pemain profesional. Dengan berbagai pilihan game slot berkualitas, kami menjamin pengalaman bermain yang tidak hanya seru tapi juga aman dan fair. Bergabunglah sekarang untuk mulai menikmati bonus besar dan layanan pelanggan terbaik">
     <meta property="og:site_name" content="365RAJA">
-    <meta property="og:url" content="https://ftp.duveen.me/">
+    <meta property="og:url" content="http://mail.progroker.com/">
     <meta property="og:title" content="365RAJA: Situs Slot Terpercaya untuk Kemenangan MAXWIN">
     <meta property="og:type" content="product">
     <meta property="og:description" content="Temukan kemenangan MAXWIN hanya di 365RAJA, situs slot terpercaya pilihan pemain profesional. Dengan berbagai pilihan game slot berkualitas, kami menjamin pengalaman bermain yang tidak hanya seru tapi juga aman dan fair. Bergabunglah sekarang untuk mulai menikmati bonus besar dan layanan pelanggan terbaik">
@@ -34,7 +35,7 @@
       window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');
     </script>
     <meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/86647243070/digital_wallets/dialog">
-    <link rel="alternate" type="application/json+oembed" href="https://ftp.duveen.me/.oembed">
+    <link rel="alternate" type="application/json+oembed" href="http://mail.progroker.com/.oembed">
     <script async="async" src="/checkouts/internal/preloads.js?locale=en-KH"></script>
     <script async="async" src="https://shop.app/checkouts/internal/preloads.js?locale=en-KH&shop_id=86647243070" crossorigin="anonymous"></script>
     <script id="shopify-features" type="application/json">
@@ -1352,7 +1353,7 @@
                       <div class="share-button__fallback motion-reduce">
                         <div class="field">
                           <span id="ShareMessage-template--22344594850110__main" class="share-button__message hidden" role="status"></span>
-                          <input type="text" class="field__input" id="ShareUrl-template--22344594850110__main" value="https://ftp.duveen.me/" placeholder="Link" onclick="this.select();" readonly>
+                          <input type="text" class="field__input" id="ShareUrl-template--22344594850110__main" value="http://mail.progroker.com/" placeholder="Link" onclick="this.select();" readonly>
                           <label class="field__label" for="ShareUrl-template--22344594850110__main">Link</label>
                         </div>
                         <button class="share-button__close hidden no-js-hidden">
